--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <hl id="hello">안녕하세요</hl>
     <hl id="hi">초보에요</hl>
-
+    <div class="alert-box">알림창임</div>
+    <button onclick = "document.getElementsByClassName('alert-box').style.display ='block'">버튼</button>
 
     <script>
         document.getElementById('hello').innerHTML = '안녕';
