--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="alert-box">알림창임</div>
-    <button onclick = "document.getElementsByClassName('alert-box').style.display ='block'">버튼</button>
+    <div class="alert-box" id="alert">알림창임
+        <button onclick="document.getElementById('alert').style.display = 'none'">끄기</button>
+    </div>
+    <button onclick = "document.getElementById('alert').style.display ='block'">켜기</button>
 
 </body>
 </html>
