--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -29,31 +29,35 @@
             }
         })
     </script>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light" id="nav">
         <div class="container-fluid">
-            <span class="navbar-brand">Navbar</span>
-            <button class="navbar-toggler" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <span class="navbar-brand">Navbar</span>
+        <button class="navbar-toggler" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         </div>
-    </nav>
+    </nav> 
     <script>
-        $(window).on('scroll',function(){
-            console.log($(window).scrollTop())
+        $(window).on('scroll', function(){
+            if(window.scrollY > 100){
+                $('.navbar-brand').css('font-size', '20px');
+            } else {
+                $('.navbar-brand').css('font-size', '30px');
+            }
         })
     </script>
-    <ul class='list'>
-        <li class="list-item">An item</li>
-        <li class="list-item">A second item</li>
-        <li class="list-item">A third item</li>
-        <li class="list-item">A fourth item</li>
-        <li class="list-item">And a fifth one</li>
+    <ul class='list-group'>
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+        <li class="list-group-item">A fourth item</li>
+        <li class="list-group-item">And a fifth one</li>
     </ul>
     <script>
 
-        $('.navbar-toggler').on('click', function(){
-            $('.list').toggleClass('show');
-        }) 
+    document.getElementsByClassName('navbar-toggler')[0].addEventListener('click', function(){
+        document.getElementsByClassName('list-group')[0].classList.toggle('show');
+    });
 
     </script>
     <div class="black-bg">
@@ -210,6 +214,5 @@
     <div style="height: 1000px;"></div>
 
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
